--- a/Syifa HTML.html
+++ b/Syifa HTML.html
@@ -106,7 +106,7 @@
 </table>
 <p>
     MEDIA SOSIAL
-    <a href="URLInstagram : Syfxyi_>Syfxyi_</a>
+    <a href="URLInstagram:https://www.instagram.com/syfxyi_?igsh=MWU1YjF3OWY4ajFucA==>Syfxyi_</a>
     <a href="Tiktok    : Syfxyi_>Syfxyi_</a>
     <a href="£Pembuka"></a>
 </p>
